--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 https://files.pythonhosted.org/packages/55/b3/279b1d57fa3681725d0db8820405cdcb4e62a9239c205e4ceac4391c78e4/hexdump-3.3.zip
 jstyleson
+pluginlib
 PyInstaller
 pyOpenSSL
 PyQt5
